--- a/style.css
+++ b/style.css
@@ -8,9 +8,8 @@ span {
 }
 
 .thumbnail {
-    max-width: 100%;
+    /* max-width: 100%; */
     max-height: 20rem;
-    
     /* width: auto; */
     padding: .5rem;
 }
