--- a/style.css
+++ b/style.css
@@ -2,13 +2,9 @@ body {
     font-size: 1.6rem;
 }
 
-span {
-    display: flex;
-    flex-flow: row wrap;
-}
-
 .thumbnail {
     /* max-width: 100%; */
+    min-height: 20rem;
     max-height: 20rem;
     /* width: auto; */
     padding: .5rem;
@@ -30,3 +26,20 @@ span {
     gap: .5rem;
     justify-content: center;
 }
+ol{
+    padding:0;
+}
+li {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.information {
+    max-width: 40rem;
+    display: flex;
+    flex-flow: column nowrap;
+}
+
+/* .descriptor {
+    font-weight: bold;
+} */
