added minor styling and a list select list to see tbr books and read books

--- a/style.css
+++ b/style.css
@@ -33,6 +33,12 @@ li {
     display: flex;
     flex-flow: row wrap;
 }
+.delete::before {
+    display: none;
+}
+.listDelete::before {
+    display: inline;
+}
 
 .information {
     max-width: 40rem;
