--- a/style.css
+++ b/style.css
@@ -63,6 +63,8 @@ fieldset{
     background-color: rgb(192, 192, 192);
     /* display: block; */
     /* margin: .5rem auto; */
+    cursor: pointer;
+    align-self: center;
 }
 .thumbnail {
     max-width: 100%;
@@ -79,18 +81,15 @@ fieldset{
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
-    gap: .5rem;
-    margin-bottom: 1rem;
+    gap: .3rem;
+    margin: 0 1rem 1rem 1rem;
+    align-items: center;
 }
 /* :has is not firefox compatible yet, but it doesn't cause an issue, just displays normal instead of hide */
 /* #result-count:has(.total:empty), */
 .page-container:has(#pages:empty){
     display: none;
 }
-/* #prev, #next {
-    cursor: pointer;
-    align-self: center;
-} */
 #pages {
     display: flex;
     flex-flow: row wrap;
