--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     background-color: rgb(5, 5, 71);
     color: rgb(228, 239, 244);
     padding-bottom: 0;
+    overflow-x: hidden;
 }
 header {
     padding: 1rem;
@@ -18,6 +19,10 @@ h1 {
     font: 4.5rem 'Rubik Iso';
     margin: 0;
     padding-bottom: 1rem;
+}
+h1 a{
+    text-decoration: none;
+    color:inherit;
 }
 #my-lists{
     position: relative;
